--- a/index.html
+++ b/index.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Roadmap for a Safer and Smarter Gaming Fleet</title>
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
   <style>
     body {
       font-family: Arial, sans-serif;
@@ -13,40 +14,27 @@
       color: #fff;
     }
     header {
-      background-color: #4b2275;
-      padding: 40px;
+      background-image: linear-gradient(to right, #4b2275, #8b5fd5);
+      padding: 80px 20px;
       text-align: center;
     }
     h1 {
-      font-size: 36px;
+      font-size: 48px;
       margin-bottom: 20px;
-    }
-    .hero-image {
-      background-image: url('https://picsum.photos/id/237/1920/1080');
-      background-size: cover;
-      background-position: center;
-      height: 500px;
-      display: flex;
-      justify-content: center;
-      align-items: center;
     }
     .hero-content {
-      text-align: center;
       max-width: 800px;
+      margin: 0 auto;
       padding: 0 20px;
     }
-    h2 {
-      font-size: 28px;
-      margin-bottom: 20px;
-    }
     p {
-      font-size: 18px;
+      font-size: 20px;
       line-height: 1.5;
       margin-bottom: 40px;
     }
     .cta-button {
       display: inline-block;
-      background-color: #8b5fd5;
+      background-color: #ff6b6b;
       color: #fff;
       text-decoration: none;
       padding: 15px 30px;
@@ -55,65 +43,72 @@
       transition: background-color 0.3s ease;
     }
     .cta-button:hover {
-      background-color: #6e40a8;
+      background-color: #ff4d4d;
     }
     .features {
-      padding: 60px 20px;
+      padding: 80px 20px;
       background-color: #2d2d2d;
     }
     .feature-item {
       display: flex;
       align-items: center;
-      margin-bottom: 40px;
+      margin-bottom: 50px;
     }
     .feature-item img {
-      width: 100px;
-      height: 100px;
-      margin-right: 20px;
+      width: 120px;
+      height: 120px;
+      margin-right: 30px;
+      border-radius: 50%;
     }
     .feature-item h3 {
-      font-size: 24px;
+      font-size: 28px;
       margin-bottom: 10px;
     }
     .feature-item p {
-      font-size: 16px;
+      font-size: 18px;
       margin-bottom: 0;
+    }
+    footer {
+      background-color: #4b2275;
+      padding: 20px;
+      text-align: center;
+      font-size: 14px;
     }
   </style>
 </head>
 <body>
   <header>
-    <h1>Roadmap for a Safer and Smarter Gaming Fleet</h1>
-  </header>
-  <div class="hero-image">
     <div class="hero-content">
-      <h2>Take Your Gaming Experience to the Next Level</h2>
+      <h1>Roadmap for a Safer and Smarter Gaming Fleet</h1>
       <p>Discover the key strategies and insights to create a safer and more efficient gaming environment.</p>
       <a href="#" class="cta-button">Download the Ebook</a>
     </div>
-  </div>
+  </header>
   <div class="features">
     <div class="feature-item">
-      <img src="https://picsum.photos/id/1/100/100" alt="Feature 1">
+      <img src="https://picsum.photos/id/1025/120/120" alt="Feature 1">
       <div>
         <h3>Smarter Gameplay</h3>
         <p>Optimize your gaming infrastructure for enhanced performance and reliability.</p>
       </div>
     </div>
     <div class="feature-item">
-      <img src="https://picsum.photos/id/2/100/100" alt="Feature 2">
+      <img src="https://picsum.photos/id/1027/120/120" alt="Feature 2">
       <div>
         <h3>Safer Environments</h3>
         <p>Implement advanced security measures to protect your gaming community.</p>
       </div>
     </div>
     <div class="feature-item">
-      <img src="https://picsum.photos/id/3/100/100" alt="Feature 3">
+      <img src="https://picsum.photos/id/1029/120/120" alt="Feature 3">
       <div>
         <h3>Enhanced Player Experience</h3>
         <p>Deliver a seamless and engaging gaming experience for your players.</p>
       </div>
     </div>
   </div>
+  <footer>
+    <p>&copy; 2024 Roadmap for a Safer and Smarter Gaming Fleet. All rights reserved.</p>
+  </footer>
 </body>
 </html>
