--- a/index.html
+++ b/index.html
@@ -1,114 +1,102 @@
 <!DOCTYPE html>
-<html lang="en">
+<html lang="pt-BR">
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Roadmap for a Safer and Smarter Gaming Fleet</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
+  <title>BGS - Brasil Game Show</title>
   <style>
+    /* CSS */
     body {
       font-family: Arial, sans-serif;
       margin: 0;
       padding: 0;
-      background-color: #1a1a1a;
-      color: #fff;
     }
     header {
-      background-image: linear-gradient(to right, #4b2275, #8b5fd5);
-      padding: 80px 20px;
-      text-align: center;
-    }
-    h1 {
-      font-size: 48px;
-      margin-bottom: 20px;
-    }
-    .hero-content {
-      max-width: 800px;
-      margin: 0 auto;
-      padding: 0 20px;
-    }
-    p {
-      font-size: 20px;
-      line-height: 1.5;
-      margin-bottom: 40px;
-    }
-    .cta-button {
-      display: inline-block;
-      background-color: #ff6b6b;
+      background-color: #333;
       color: #fff;
-      text-decoration: none;
-      padding: 15px 30px;
-      border-radius: 5px;
-      font-size: 18px;
-      transition: background-color 0.3s ease;
-    }
-    .cta-button:hover {
-      background-color: #ff4d4d;
-    }
-    .features {
-      padding: 80px 20px;
-      background-color: #2d2d2d;
-    }
-    .feature-item {
-      display: flex;
-      align-items: center;
-      margin-bottom: 50px;
-    }
-    .feature-item img {
-      width: 120px;
-      height: 120px;
-      margin-right: 30px;
-      border-radius: 50%;
-    }
-    .feature-item h3 {
-      font-size: 28px;
-      margin-bottom: 10px;
-    }
-    .feature-item p {
-      font-size: 18px;
-      margin-bottom: 0;
-    }
-    footer {
-      background-color: #4b2275;
       padding: 20px;
       text-align: center;
-      font-size: 14px;
+    }
+    nav {
+      background-color: #f2f2f2;
+      padding: 10px;
+      text-align: center;
+    }
+    nav a {
+      color: #333;
+      text-decoration: none;
+      padding: 10px;
+      margin: 5px;
+    }
+    nav a:hover {
+      background-color: #333;
+      color: #fff;
+    }
+    main {
+      padding: 20px;
+    }
+    .event-info {
+      background-color: #f2f2f2;
+      padding: 20px;
+      margin-bottom: 20px;
+    }
+    .event-info h3 {
+      margin-top: 0;
+    }
+    .news-item {
+      border-bottom: 1px solid #ccc;
+      padding-bottom: 10px;
+      margin-bottom: 10px;
+    }
+    .news-item:last-child {
+      border-bottom: none;
+    }
+    footer {
+      background-color: #333;
+      color: #fff;
+      padding: 10px;
+      text-align: center;
     }
   </style>
 </head>
 <body>
   <header>
-    <div class="hero-content">
-      <h1>Roadmap for a Safer and Smarter Gaming Fleet</h1>
-      <p>Discover the key strategies and insights to create a safer and more efficient gaming environment.</p>
-      <a href="#" class="cta-button">Download the Ebook</a>
-    </div>
+    <h1>BGS - Brasil Game Show</h1>
   </header>
-  <div class="features">
-    <div class="feature-item">
-      <img src="https://picsum.photos/id/1025/120/120" alt="Feature 1">
-      <div>
-        <h3>Smarter Gameplay</h3>
-        <p>Optimize your gaming infrastructure for enhanced performance and reliability.</p>
-      </div>
+  <nav>
+    <a href="#">Home</a>
+    <a href="#">Programação</a>
+    <a href="#">Ingressos</a>
+    <a href="#">Expositores</a>
+    <a href="#">Contato</a>
+  </nav>
+  <main>
+    <h2>Bem-vindo à BGS</h2>
+    <p>A Brasil Game Show é a maior feira de games da América Latina. Aqui você encontra os melhores lançamentos, eventos, palestras e muito mais!</p>
+    <div class="event-info">
+      <h3>Próxima Edição</h3>
+      <p>A próxima edição da BGS acontecerá de 10 a 13 de outubro de 2024 no São Paulo Expo.</p>
     </div>
-    <div class="feature-item">
-      <img src="https://picsum.photos/id/1027/120/120" alt="Feature 2">
-      <div>
-        <h3>Safer Environments</h3>
-        <p>Implement advanced security measures to protect your gaming community.</p>
-      </div>
+    <h2>Notícias</h2>
+    <div class="news-item">
+      <h3>Novo jogo da série Zelda será lançado na BGS 2024</h3>
+      <p>A Nintendo anunciou que o próximo título da aclamada série Zelda será lançado durante a Brasil Game Show 2024.</p>
     </div>
-    <div class="feature-item">
-      <img src="https://picsum.photos/id/1029/120/120" alt="Feature 3">
-      <div>
-        <h3>Enhanced Player Experience</h3>
-        <p>Deliver a seamless and engaging gaming experience for your players.</p>
-      </div>
+    <div class="news-item">
+      <h3>Expositor XYZ anuncia novidades exclusivas para a feira</h3>
+      <p>O expositor XYZ prometeu trazer novidades exclusivas e demonstrações especiais para os visitantes da BGS 2024.</p>
     </div>
-  </div>
+    <div class="news-item">
+      <h3>Ingressos para a BGS 2024 já estão à venda</h3>
+      <p>Os ingressos para a próxima edição da Brasil Game Show já estão disponíveis para compra online.</p>
+    </div>
+  </main>
   <footer>
-    <p>&copy; 2024 Roadmap for a Safer and Smarter Gaming Fleet. All rights reserved.</p>
+    <p>&copy; 2024 BGS. Todos os direitos reservados.</p>
   </footer>
+  <script>
+    // JavaScript
+    // Adicione interatividade e funcionalidades adicionais aqui
+  </script>
 </body>
 </html>
