--- a/index.html
+++ b/index.html
@@ -1,191 +1,304 @@
 <!DOCTYPE html>
 <html lang="pt-BR">
 <head>
-  <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>BGS - Brasil Game Show</title>
-  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/5.15.3/css/all.min.css">
-  <style>
-    /* CSS */
-    body {
-      font-family: 'Roboto', Arial, sans-serif;
-      margin: 0;
-      padding: 0;
-    }
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
+    <title>PetShop do Bairro - Seu Pet Feliz!</title>
+    <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/font-awesome/6.4.0/css/all.min.css">
+    <style>
+        /* Reset e estilos gerais */
+        * {
+            margin: 0;
+            padding: 0;
+            box-sizing: border-box;
+        }
+        body {
+            font-family: 'Arial', sans-serif;
+            line-height: 1.6;
+            color: #333;
+        }
+        .container {
+            max-width: 1200px;
+            margin: 0 auto;
+            padding: 0 20px;
+        }
 
-    /* Cabeçalho */
-    header {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
+        /* Header */
+        header {
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 20px 0;
+        }
+        .logo {
+            font-size: 24px;
+            font-weight: bold;
+        }
+        nav ul {
+            list-style: none;
+            display: flex;
+            justify-content: space-around;
+            margin-top: 20px;
+        }
+        nav ul li a {
+            color: #fff;
+            text-decoration: none;
+            padding: 5px 10px;
+        }
+        nav ul li a:hover {
+            background-color: #45a049;
+        }
 
-    header .logo {
-      max-width: 300px;
-    }
+        /* Hero Section */
+        .hero {
+            background-image: url('https://via.placeholder.com/1200x400');
+            background-size: cover;
+            background-position: center;
+            height: 400px;
+            display: flex;
+            align-items: center;
+            justify-content: center;
+            text-align: center;
+            color: #fff;
+        }
+        .hero h1 {
+            font-size: 48px;
+            margin-bottom: 20px;
+        }
+        .hero p {
+            font-size: 24px;
+            margin-bottom: 30px;
+        }
+        .cta-button {
+            display: inline-block;
+            background-color: #4CAF50;
+            color: #fff;
+            padding: 10px 20px;
+            text-decoration: none;
+            font-size: 18px;
+            border-radius: 5px;
+        }
+        .cta-button:hover {
+            background-color: #45a049;
+        }
 
-    /* Navegação */
-    nav {
-      background-color: #f2f2f2;
-      padding: 10px;
-      text-align: center;
-    }
+        /* Produtos */
+        .products {
+            padding: 50px 0;
+        }
+        .products h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .product-grid {
+            display: grid;
+            grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+            gap: 30px;
+        }
+        .product-card {
+            border: 1px solid #ddd;
+            padding: 20px;
+            text-align: center;
+            border-radius: 5px;
+        }
+        .product-card img {
+            max-width: 100%;
+            height: 200px;
+            object-fit: cover;
+            margin-bottom: 15px;
+        }
+        .product-card h3 {
+            margin-bottom: 10px;
+        }
+        .product-card p {
+            margin-bottom: 15px;
+        }
+        .product-card .price {
+            font-weight: bold;
+            color: #4CAF50;
+            margin-bottom: 15px;
+        }
+        .product-card button {
+            background-color: #4CAF50;
+            color: #fff;
+            border: none;
+            padding: 8px 15px;
+            cursor: pointer;
+            border-radius: 3px;
+        }
+        .product-card button:hover {
+            background-color: #45a049;
+        }
 
-    nav a {
-      color: #333;
-      text-decoration: none;
-      padding: 10px 20px;
-      margin: 5px;
-      transition: background-color 0.3s, color 0.3s;
-    }
+        /* Sobre nós */
+        .about {
+            background-color: #f4f4f4;
+            padding: 50px 0;
+        }
+        .about h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .about p {
+            text-align: center;
+            max-width: 800px;
+            margin: 0 auto;
+        }
 
-    nav a:hover {
-      background-color: #333;
-      color: #fff;
-    }
+        /* Contato */
+        .contact {
+            padding: 50px 0;
+        }
+        .contact h2 {
+            text-align: center;
+            margin-bottom: 30px;
+        }
+        .contact-info {
+            display: flex;
+            justify-content: space-around;
+            flex-wrap: wrap;
+        }
+        .contact-item {
+            text-align: center;
+            margin-bottom: 20px;
+        }
+        .contact-item i {
+            font-size: 24px;
+            color: #4CAF50;
+            margin-bottom: 10px;
+        }
 
-    /* Conteúdo Principal */
-    main {
-      padding: 40px;
-    }
+        /* Footer */
+        footer {
+            background-color: #333;
+            color: #fff;
+            text-align: center;
+            padding: 20px 0;
+        }
 
-    .event-info {
-      background-color: #f2f2f2;
-      padding: 30px;
-      margin-bottom: 40px;
-      display: flex;
-      align-items: center;
-    }
-
-    .event-info img {
-      max-width: 400px;
-      margin-right: 30px;
-    }
-
-    .event-info h2 {
-      margin-top: 0;
-    }
-
-    .news-container {
-      display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(300px, 1fr));
-      grid-gap: 30px;
-    }
-
-    .news-item {
-      border: 1px solid #ccc;
-      padding: 20px;
-      display: flex;
-      flex-direction: column;
-      align-items: center;
-    }
-
-    .news-item img {
-      max-width: 100%;
-      height: 200px;
-      object-fit: cover;
-      margin-bottom: 20px;
-    }
-
-    .news-item h3 {
-      margin-top: 0;
-    }
-
-    /* Rodapé */
-    footer {
-      background-color: #333;
-      color: #fff;
-      padding: 20px;
-      text-align: center;
-    }
-
-    footer p {
-      margin: 0;
-    }
-
-    /* Responsividade */
-    @media (max-width: 768px) {
-      .event-info {
-        flex-direction: column;
-        text-align: center;
-      }
-
-      .event-info img {
-        max-width: 100%;
-        margin-right: 0;
-        margin-bottom: 20px;
-      }
-    }
-  </style>
+        /* WhatsApp Button */
+        .whatsapp-button {
+            position: fixed;
+            bottom: 20px;
+            right: 20px;
+            background-color: #25D366;
+            color: #fff;
+            padding: 10px 20px;
+            border-radius: 50px;
+            text-decoration: none;
+            display: flex;
+            align-items: center;
+            font-weight: bold;
+        }
+        .whatsapp-button i {
+            margin-right: 10px;
+            font-size: 24px;
+        }
+    </style>
 </head>
 <body>
-  <header>
-    <img src="https://via.placeholder.com/300x100" alt="BGS - Brasil Game Show" class="logo">
-  </header>
+    <header>
+        <div class="container">
+            <div class="logo">PetShop do Bairro</div>
+            <nav>
+                <ul>
+                    <li><a href="#home">Início</a></li>
+                    <li><a href="#products">Produtos</a></li>
+                    <li><a href="#about">Sobre Nós</a></li>
+                    <li><a href="#contact">Contato</a></li>
+                </ul>
+            </nav>
+        </div>
+    </header>
 
-  <nav>
-    <a href="#">Home</a>
-    <a href="#">Programação</a>
-    <a href="#">Ingressos</a>
-    <a href="#">Expositores</a>
-    <a href="#">Contato</a>
-  </nav>
+    <main>
+        <section id="home" class="hero">
+            <div class="container">
+                <h1>Bem-vindo ao PetShop do Bairro</h1>
+                <p>Tudo para o seu pet ficar feliz e saudável!</p>
+                <a href="#products" class="cta-button">Ver Produtos</a>
+            </div>
+        </section>
 
-  <main>
-    <section class="event-info">
-      <img src="https://via.placeholder.com/400x300" alt="Próxima Edição">
-      <div>
-        <h2>Próxima Edição</h2>
-        <p>A próxima edição da BGS acontecerá de 10 a 13 de outubro de 2024 no São Paulo Expo.</p>
-        <a href="#" class="btn">Saiba Mais</a>
-      </div>
-    </section>
+        <section id="products" class="products">
+            <div class="container">
+                <h2>Nossos Produtos</h2>
+                <div class="product-grid">
+                    <div class="product-card">
+                        <img src="https://via.placeholder.com/250x200" alt="Ração Premium">
+                        <h3>Ração Premium</h3>
+                        <p>Ração de alta qualidade para cães adultos</p>
+                        <div class="price">R$ 89,90</div>
+                        <button>Comprar</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="https://via.placeholder.com/250x200" alt="Brinquedo Interativo">
+                        <h3>Brinquedo Interativo</h3>
+                        <p>Brinquedo divertido para gatos</p>
+                        <div class="price">R$ 39,90</div>
+                        <button>Comprar</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="https://via.placeholder.com/250x200" alt="Coleira Ajustável">
+                        <h3>Coleira Ajustável</h3>
+                        <p>Coleira confortável para cães de todos os tamanhos</p>
+                        <div class="price">R$ 29,90</div>
+                        <button>Comprar</button>
+                    </div>
+                    <div class="product-card">
+                        <img src="https://via.placeholder.com/250x200" alt="Shampoo Hipoalergênico">
+                        <h3>Shampoo Hipoalergênico</h3>
+                        <p>Shampoo suave para pets com pele sensível</p>
+                        <div class="price">R$ 24,90</div>
+                        <button>Comprar</button>
+                    </div>
+                </div>
+            </div>
+        </section>
 
-    <h2>Últimas Notícias</h2>
-    <div class="news-container">
-      <div class="news-item">
-        <img src="https://via.placeholder.com/300x200" alt="Novo jogo da série Zelda">
-        <h3>Novo jogo da série Zelda será lançado na BGS 2024</h3>
-        <p>A Nintendo anunciou que o próximo título da aclamada série Zelda será lançado durante a Brasil Game Show 2024.</p>
-        <a href="#" class="btn">Leia Mais</a>
-      </div>
-      <div class="news-item">
-        <img src="https://via.placeholder.com/300x200" alt="Expositor XYZ">
-        <h3>Expositor XYZ anuncia novidades exclusivas para a feira</h3>
-        <p>O expositor XYZ prometeu trazer novidades exclusivas e demonstrações especiais para os visitantes da BGS 2024.</p>
-        <a href="#" class="btn">Leia Mais</a>
-      </div>
-      <div class="news-item">
-        <img src="https://via.placeholder.com/300x200" alt="Ingressos BGS 2024">
-        <h3>Ingressos para a BGS 2024 já estão à venda</h3>
-        <p>Os ingressos para a próxima edição da Brasil Game Show já estão disponíveis para compra online.</p>
-        <a href="#" class="btn">Comprar Ingressos</a>
-      </div>
-    </div>
-  </main>
+        <section id="about" class="about">
+            <div class="container">
+                <h2>Sobre Nós</h2>
+                <p>O PetShop do Bairro é uma loja especializada em produtos para animais de estimação. Há mais de 10 anos, oferecemos uma ampla variedade de produtos de qualidade para cães, gatos e outros pets. Nossa missão é proporcionar o melhor para o seu animal de estimação, com atendimento personalizado e preços justos.</p>
+            </div>
+        </section>
 
-  <footer>
-    <p>&copy; 2024 BGS. Todos os direitos reservados.</p>
-  </footer>
+        <section id="contact" class="contact">
+            <div class="container">
+                <h2>Entre em Contato</h2>
+                <div class="contact-info">
+                    <div class="contact-item">
+                        <i class="fas fa-map-marker-alt"></i>
+                        <p>Rua das Flores, 123<br>Bairro Feliz, Cidade - UF</p>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-phone"></i>
+                        <p>(11) 1234-5678</p>
+                    </div>
+                    <div class="contact-item">
+                        <i class="fas fa-envelope"></i>
+                        <p>contato@petshopdobairro.com</p>
+                    </div>
+                </div>
+            </div>
+        </section>
+    </main>
 
-  <script>
-    // JavaScript
-    // Adicione interatividade e funcionalidades adicionais aqui
-    // Exemplo: Mostrar/Ocultar menu de navegação em dispositivos móveis
-    const navMenu = document.querySelector('nav');
-    const menuToggle = document.createElement('button');
-    menuToggle.classList.add('menu-toggle');
-    menuToggle.innerHTML = '<i class="fas fa-bars"></i>';
+    <footer>
+        <div class="container">
+            <p>&copy; 2023 PetShop do Bairro. Todos os direitos reservados.</p>
+        </div>
+    </footer>
 
-    menuToggle.addEventListener('click', () => {
-      navMenu.classList.toggle('show');
-      menuToggle.classList.toggle('open');
-    });
+    <a href="https://wa.me/5511999999999" class="whatsapp-button" target="_blank">
+        <i class="fab fa-whatsapp"></i> Fale conosco
+    </a>
 
-    navMenu.parentNode.insertBefore(menuToggle, navMenu);
-
-    // Adicione mais funcionalidades conforme necessário
-  </script>
+    <!-- Jivochat Script -->
+    <script>
+    (function(){ var widget_id = 'XXXXXXXXXXXXXXXX';var d=document;var w=window;function l(){
+    var s = document.createElement('script'); s.type = 'text/javascript'; s.async = true;
+    s.src = '//code.jivosite.com/script/widget/'+widget_id; var ss = document.getElementsByTagName('script')[0]; ss.parentNode.insertBefore(s, ss);}
+    if(d.readyState=='complete'){l();}else{if(w.attachEvent){w.attachEvent('onload',l);}else{w.addEventListener('load',l,false);}}})();
+    </script>
 </body>
 </html>
